background color changed

--- a/style.css
+++ b/style.css
@@ -35,6 +35,6 @@ body{
 .btn{
     padding: 5px;
     border-radius: 5px;
-    background-color:#EEEDEB;
+    background-color:#EEEDEc;
     cursor: pointer;
 }
